force-app/main/default/objects/KAffectationRH__c/KAffectationRH__c.object-meta.xml
<CustomObject>
    <description>Objet utilisé pour les tableaux Einstein</description>
    <label>KAffectationRH</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Numéro affectation RH</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KAffectationRH</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>