force-app/main/default/objects/KAffectationRH__c/fields/collaborator__c.field-meta.xml
<CustomField>
    <fullName>collaborator__c</fullName>
    <label>Collaborateur</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>