force-app/main/default/objects/KAffectationRH__c/fields/direction__c.field-meta.xml
<CustomField>
    <fullName>direction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direction</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KAffectationRH (Direction)</relationshipLabel>
    <relationshipName>KAffectationRH1</relationshipName>
    <type>Lookup</type>
</CustomField>