force-app/main/default/objects/KAffectationRH__c/fields/directionCode__c.field-meta.xml
<CustomField>
    <fullName>directionCode__c</fullName>
    <label>Direction (Code)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>