force-app/main/default/objects/KAffectationRH__c/fields/directionName__c.field-meta.xml
<CustomField>
    <fullName>directionName__c</fullName>
    <label>Direction (Nom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>