force-app/main/default/objects/KAffectationRH__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>