force-app/main/default/objects/KAffectationRH__c/fields/entity__c.field-meta.xml
<CustomField>
    <fullName>entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KAffectationRH</relationshipLabel>
    <relationshipName>KAffectationRH</relationshipName>
    <type>Lookup</type>
</CustomField>