force-app/main/default/objects/KAffectationRH__c/fields/entityCode__c.field-meta.xml
<CustomField>
    <fullName>entityCode__c</fullName>
    <label>Entité (Code)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>