force-app/main/default/objects/KAffectationRH__c/fields/entityName__c.field-meta.xml
<CustomField>
    <fullName>entityName__c</fullName>
    <label>Entité (Nom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>