force-app/main/default/objects/KAffectationRH__c/fields/job__c.field-meta.xml
<CustomField>
    <fullName>job__c</fullName>
    <label>Métier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>