force-app/main/default/objects/KAffectationRH__c/fields/matricule__c.field-meta.xml
<CustomField>
    <fullName>matricule__c</fullName>
    <externalId>true</externalId>
    <label>Matricule vendeur</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>