force-app/main/default/objects/KAffectationRH__c/fields/operationalSector__c.field-meta.xml
<CustomField>
    <fullName>operationalSector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secteur opérationnel</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KAffectationRH (Secteur opérationnel)</relationshipLabel>
    <relationshipName>KAffectationRH3</relationshipName>
    <type>Lookup</type>
</CustomField>