force-app/main/default/objects/KAffectationRH__c/fields/operationalSectorCode__c.field-meta.xml
<CustomField>
    <fullName>operationalSectorCode__c</fullName>
    <label>Secteur opérationnel (Code)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>