force-app/main/default/objects/KAffectationRH__c/fields/operationalSectorName__c.field-meta.xml
<CustomField>
    <fullName>operationalSectorName__c</fullName>
    <label>Secteur opérationnel (Nom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>