force-app/main/default/objects/KAffectationRH__c/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Région</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>KAffectationRH (Région)</relationshipLabel>
    <relationshipName>KAffectationRH2</relationshipName>
    <type>Lookup</type>
</CustomField>