force-app/main/default/objects/KAffectationRH__c/fields/regionCode__c.field-meta.xml
<CustomField>
    <fullName>regionCode__c</fullName>
    <label>Région (Code)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>