force-app/main/default/objects/KAffectationRH__c/fields/regionName__c.field-meta.xml
<CustomField>
    <fullName>regionName__c</fullName>
    <label>Région (Nom)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>